--- a/css/master.css
+++ b/css/master.css
@@ -47,7 +47,7 @@ body{
 .next-btn{
   display: none;
 }
-.login-account, #account-evans{
+.login-account, #account-evans, #account-evanss{
   display: none;
 }
 
