--- a/css/account.css
+++ b/css/account.css
@@ -40,7 +40,7 @@ header button{
 
 @media screen and (max-width: 900px) {
   #login-box{
-    width: 95%;
+    width: 93%;
   }
 }
 
@@ -58,10 +58,17 @@ header button{
 
   @media screen and (max-width: 900px) {
     #login-inputs{
-      margin-left: -2%;
     }
     #login-inputs input{
-      width: 80%;
+      width: 90%;
+      background: rgba(255,255,255,0.6);
+      border: none;
+      border-radius: 2px;
+      color: black;
+      text-align: center;
+    }
+    #login-box{
+      width: 95%;
     }
   }
 #login-box button{
