--- a/css/account.css
+++ b/css/account.css
@@ -55,6 +55,13 @@ header button{
 #login-inputs{
   margin-left: 5%;
 }
+#login-inputs input{
+
+  background: rgba(255,255,255,0.6);
+  border: none;
+  color: black;
+  text-align: center;
+}
 
   @media screen and (max-width: 900px) {
     #login-inputs{
