--- a/css/account.css
+++ b/css/account.css
@@ -1,20 +1,39 @@
 html a{
   color: inherit;
 }
+body{
+
+}
+
+.option-details-box .card-body {
+  font-size: 1rem!important;
+}
+
+
+
+  @media screen and (min-width: 910px) {
+
+  }
 #login-container{
   font-family: arial;
   letter-spacing: 1px;
   font-weight: lighter;
-
   margin-top: 100px;
   padding-bottom: 30px;
-  font-size: 120%;
   color: silver;
+  background-image: url("img/account-bg.jpg");
+
 }
 
 header{
   text-align: right;
-
+}
+header .menu{
+  padding-right: 20px;
+  display: none;
+}
+header .menu a:hover{
+  color: green;
 }
 
 header button{
@@ -34,7 +53,6 @@ header button{
   background: rgba(0,0,0,0.5);
 }
 #loginbtn{
-  font-size: 110%;
   width: 130px;
 }
 
@@ -43,6 +61,8 @@ header button{
     width: 93%;
   }
 }
+
+
 
 #login-top{
   text-align: center;
@@ -56,7 +76,6 @@ header button{
   margin-left: 5%;
 }
 #login-inputs input{
-
   background: rgba(255,255,255,0.6);
   border: none;
   color: black;
@@ -119,6 +138,8 @@ header button{
 #transferCon-btn-shutto, .continuebtn{
   display: none;
 }
+
+
 
 footer{
   font-family: arial;
