--- a/css/master-login.css
+++ b/css/master-login.css
@@ -40,6 +40,12 @@ body{
   padding: 10px;
   overflow: hidden;
 }
+@media screen and (max-width:600px) {
+  .login-box{
+    width: 95%;
+    padding: 10px 0;
+  }
+}
 .login-title{
   font-family: arial;
   margin-left: 4px;
@@ -137,7 +143,7 @@ fieldset input{
   margin-top: 106px;
   padding: 10px;
   border-radius: 12px;
-  display: none;/* WARNING: changes */
+  display: block;/* WARNING: changes */
 }
 .account-details-box{
   font-family: arial;
@@ -159,6 +165,7 @@ fieldset input{
 .account-nav-holder{
   text-align: center;
   margin: 15px auto;
+  background: rgba(0,0,0,0.8);
 }
 .account-nav-holder span{
   background: rgb(62, 46, 255);
@@ -169,6 +176,17 @@ fieldset input{
   margin-top: 5px;
   width: 18%;
   font-size:10px;
+}
+
+@media screen and (max-width:424px) {
+  .account-nav-holder span{
+    width: 20%;
+    font-size:53%;
+    padding: 5px 3px;
+  }
+  #us-txt{
+    display: none;
+  }
 }
 .account-status-box{
   border: 1px solid black;
